--- a/distributed_object_tracking.ipynb
+++ b/distributed_object_tracking.ipynb
@@ -6,7 +6,7 @@
       "name": "distributed-object-tracking.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMTzhZlD9/43LxhGPXZSQop",
+      "authorship_tag": "ABX9TyP8Lmqlu/HLVuqEKkV2C4Sy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,7 +109,7 @@
         "id": "-K5HMWjdr8G1",
         "outputId": "abca9c05-dea1-4ecb-eb3f-4f29c2fc79fb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -142,10 +142,93 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Removing any old existing frames from previous runs.\n",
+        "import os\n",
+        "try:\n",
+        "    files_in_directory = os.listdir(\"./frames/\")\n",
+        "    filtered_files = [file for file in files_in_directory if file.endswith(\".jpg\")]\n",
+        "    for file in filtered_files:\n",
+        "      path_to_file = os.path.join(\"./frames/\", file)\n",
+        "      # print(path_to_file)\n",
+        "      os.remove(path_to_file)\n",
+        "\n",
+        "except OSError as e:\n",
+        "    print(\"Error: %s : %s\" % (path_to_file, e.strerror))"
       ],
       "metadata": {
         "id": "vVKSFHvtseih"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extracting the frames from the video and saving them to the frames directory \n",
+        "import cv2\n",
+        "vidcap = cv2.VideoCapture(\"rgb.mp4\")\n",
+        "success,image = vidcap.read()\n",
+        "count = 0\n",
+        "while success:\n",
+        "  cv2.imwrite(\"./frames/%dframe.jpg\" % count, image)     # save frame as JPEG file      \n",
+        "  success,image = vidcap.read()\n",
+        "  count += 1"
+      ],
+      "metadata": {
+        "id": "GlSaRLJql58R"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extracting the list of frames from the frames directory and sorting them in the right order\n",
+        "frames = []\n",
+        "for file in sorted(os.listdir(\"./frames\"), key=lambda x: int(x.replace(\"frame.jpg\", \"\"))):\n",
+        "    frames.append(file)\n",
+        "    \n",
+        "# print(frames)\n"
+      ],
+      "metadata": {
+        "id": "Fx-3GFuPr1hA",
+        "outputId": "a02d9b2e-a641-4e08-d809-021f004e404b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['0frame.jpg', '1frame.jpg', '2frame.jpg', '3frame.jpg', '4frame.jpg', '5frame.jpg', '6frame.jpg', '7frame.jpg', '8frame.jpg', '9frame.jpg', '10frame.jpg', '11frame.jpg', '12frame.jpg', '13frame.jpg', '14frame.jpg', '15frame.jpg', '16frame.jpg', '17frame.jpg', '18frame.jpg', '19frame.jpg', '20frame.jpg', '21frame.jpg', '22frame.jpg', '23frame.jpg', '24frame.jpg', '25frame.jpg', '26frame.jpg', '27frame.jpg', '28frame.jpg', '29frame.jpg', '30frame.jpg', '31frame.jpg', '32frame.jpg', '33frame.jpg', '34frame.jpg', '35frame.jpg', '36frame.jpg', '37frame.jpg', '38frame.jpg', '39frame.jpg', '40frame.jpg', '41frame.jpg', '42frame.jpg', '43frame.jpg', '44frame.jpg', '45frame.jpg', '46frame.jpg', '47frame.jpg', '48frame.jpg', '49frame.jpg', '50frame.jpg', '51frame.jpg', '52frame.jpg', '53frame.jpg', '54frame.jpg', '55frame.jpg', '56frame.jpg', '57frame.jpg', '58frame.jpg', '59frame.jpg', '60frame.jpg', '61frame.jpg', '62frame.jpg', '63frame.jpg', '64frame.jpg', '65frame.jpg', '66frame.jpg', '67frame.jpg', '68frame.jpg', '69frame.jpg', '70frame.jpg', '71frame.jpg', '72frame.jpg', '73frame.jpg', '74frame.jpg', '75frame.jpg', '76frame.jpg', '77frame.jpg', '78frame.jpg', '79frame.jpg', '80frame.jpg', '81frame.jpg', '82frame.jpg', '83frame.jpg', '84frame.jpg', '85frame.jpg', '86frame.jpg', '87frame.jpg', '88frame.jpg', '89frame.jpg', '90frame.jpg', '91frame.jpg', '92frame.jpg', '93frame.jpg', '94frame.jpg', '95frame.jpg', '96frame.jpg', '97frame.jpg', '98frame.jpg', '99frame.jpg', '100frame.jpg', '101frame.jpg', '102frame.jpg', '103frame.jpg', '104frame.jpg', '105frame.jpg', '106frame.jpg', '107frame.jpg', '108frame.jpg', '109frame.jpg', '110frame.jpg', '111frame.jpg', '112frame.jpg', '113frame.jpg', '114frame.jpg', '115frame.jpg', '116frame.jpg', '117frame.jpg', '118frame.jpg', '119frame.jpg', '120frame.jpg', '121frame.jpg', '122frame.jpg', '123frame.jpg', '124frame.jpg', '125frame.jpg', '126frame.jpg', '127frame.jpg', '128frame.jpg', '129frame.jpg', '130frame.jpg', '131frame.jpg', '132frame.jpg', '133frame.jpg', '134frame.jpg', '135frame.jpg', '136frame.jpg', '137frame.jpg', '138frame.jpg', '139frame.jpg', '140frame.jpg', '141frame.jpg', '142frame.jpg', '143frame.jpg', '144frame.jpg', '145frame.jpg', '146frame.jpg', '147frame.jpg', '148frame.jpg', '149frame.jpg', '150frame.jpg', '151frame.jpg', '152frame.jpg', '153frame.jpg', '154frame.jpg', '155frame.jpg', '156frame.jpg', '157frame.jpg', '158frame.jpg', '159frame.jpg', '160frame.jpg', '161frame.jpg', '162frame.jpg', '163frame.jpg', '164frame.jpg', '165frame.jpg', '166frame.jpg', '167frame.jpg', '168frame.jpg', '169frame.jpg', '170frame.jpg', '171frame.jpg', '172frame.jpg', '173frame.jpg', '174frame.jpg', '175frame.jpg', '176frame.jpg', '177frame.jpg', '178frame.jpg', '179frame.jpg', '180frame.jpg', '181frame.jpg', '182frame.jpg', '183frame.jpg', '184frame.jpg', '185frame.jpg', '186frame.jpg', '187frame.jpg', '188frame.jpg', '189frame.jpg', '190frame.jpg', '191frame.jpg', '192frame.jpg', '193frame.jpg', '194frame.jpg', '195frame.jpg', '196frame.jpg', '197frame.jpg', '198frame.jpg', '199frame.jpg', '200frame.jpg', '201frame.jpg', '202frame.jpg', '203frame.jpg', '204frame.jpg', '205frame.jpg', '206frame.jpg', '207frame.jpg', '208frame.jpg', '209frame.jpg', '210frame.jpg', '211frame.jpg', '212frame.jpg', '213frame.jpg', '214frame.jpg', '215frame.jpg', '216frame.jpg', '217frame.jpg', '218frame.jpg', '219frame.jpg', '220frame.jpg', '221frame.jpg', '222frame.jpg', '223frame.jpg', '224frame.jpg', '225frame.jpg', '226frame.jpg', '227frame.jpg', '228frame.jpg', '229frame.jpg', '230frame.jpg', '231frame.jpg', '232frame.jpg', '233frame.jpg', '234frame.jpg', '235frame.jpg', '236frame.jpg', '237frame.jpg', '238frame.jpg', '239frame.jpg', '240frame.jpg', '241frame.jpg', '242frame.jpg', '243frame.jpg', '244frame.jpg', '245frame.jpg', '246frame.jpg', '247frame.jpg', '248frame.jpg', '249frame.jpg', '250frame.jpg', '251frame.jpg', '252frame.jpg', '253frame.jpg', '254frame.jpg', '255frame.jpg', '256frame.jpg', '257frame.jpg', '258frame.jpg', '259frame.jpg', '260frame.jpg', '261frame.jpg', '262frame.jpg', '263frame.jpg', '264frame.jpg', '265frame.jpg', '266frame.jpg', '267frame.jpg', '268frame.jpg', '269frame.jpg', '270frame.jpg', '271frame.jpg', '272frame.jpg', '273frame.jpg', '274frame.jpg', '275frame.jpg', '276frame.jpg', '277frame.jpg', '278frame.jpg', '279frame.jpg', '280frame.jpg', '281frame.jpg', '282frame.jpg', '283frame.jpg', '284frame.jpg', '285frame.jpg', '286frame.jpg', '287frame.jpg', '288frame.jpg', '289frame.jpg', '290frame.jpg', '291frame.jpg', '292frame.jpg', '293frame.jpg', '294frame.jpg', '295frame.jpg', '296frame.jpg', '297frame.jpg', '298frame.jpg', '299frame.jpg', '300frame.jpg', '301frame.jpg', '302frame.jpg', '303frame.jpg', '304frame.jpg', '305frame.jpg', '306frame.jpg', '307frame.jpg', '308frame.jpg', '309frame.jpg', '310frame.jpg', '311frame.jpg', '312frame.jpg', '313frame.jpg', '314frame.jpg', '315frame.jpg', '316frame.jpg', '317frame.jpg', '318frame.jpg', '319frame.jpg', '320frame.jpg', '321frame.jpg', '322frame.jpg', '323frame.jpg', '324frame.jpg', '325frame.jpg', '326frame.jpg', '327frame.jpg', '328frame.jpg', '329frame.jpg', '330frame.jpg', '331frame.jpg', '332frame.jpg', '333frame.jpg', '334frame.jpg', '335frame.jpg', '336frame.jpg', '337frame.jpg', '338frame.jpg', '339frame.jpg', '340frame.jpg', '341frame.jpg', '342frame.jpg', '343frame.jpg', '344frame.jpg', '345frame.jpg', '346frame.jpg', '347frame.jpg', '348frame.jpg', '349frame.jpg', '350frame.jpg', '351frame.jpg', '352frame.jpg', '353frame.jpg', '354frame.jpg', '355frame.jpg', '356frame.jpg', '357frame.jpg', '358frame.jpg', '359frame.jpg', '360frame.jpg', '361frame.jpg', '362frame.jpg', '363frame.jpg', '364frame.jpg', '365frame.jpg', '366frame.jpg', '367frame.jpg', '368frame.jpg', '369frame.jpg', '370frame.jpg', '371frame.jpg', '372frame.jpg', '373frame.jpg', '374frame.jpg', '375frame.jpg', '376frame.jpg', '377frame.jpg', '378frame.jpg', '379frame.jpg', '380frame.jpg', '381frame.jpg', '382frame.jpg', '383frame.jpg', '384frame.jpg', '385frame.jpg', '386frame.jpg', '387frame.jpg', '388frame.jpg', '389frame.jpg', '390frame.jpg', '391frame.jpg', '392frame.jpg', '393frame.jpg', '394frame.jpg', '395frame.jpg', '396frame.jpg', '397frame.jpg', '398frame.jpg', '399frame.jpg', '400frame.jpg', '401frame.jpg', '402frame.jpg', '403frame.jpg', '404frame.jpg', '405frame.jpg', '406frame.jpg', '407frame.jpg', '408frame.jpg', '409frame.jpg', '410frame.jpg', '411frame.jpg', '412frame.jpg', '413frame.jpg', '414frame.jpg', '415frame.jpg', '416frame.jpg', '417frame.jpg', '418frame.jpg', '419frame.jpg', '420frame.jpg', '421frame.jpg', '422frame.jpg', '423frame.jpg', '424frame.jpg', '425frame.jpg', '426frame.jpg', '427frame.jpg', '428frame.jpg', '429frame.jpg', '430frame.jpg', '431frame.jpg', '432frame.jpg', '433frame.jpg', '434frame.jpg', '435frame.jpg', '436frame.jpg', '437frame.jpg', '438frame.jpg', '439frame.jpg', '440frame.jpg', '441frame.jpg', '442frame.jpg', '443frame.jpg', '444frame.jpg', '445frame.jpg', '446frame.jpg', '447frame.jpg', '448frame.jpg', '449frame.jpg', '450frame.jpg', '451frame.jpg', '452frame.jpg', '453frame.jpg', '454frame.jpg', '455frame.jpg', '456frame.jpg', '457frame.jpg', '458frame.jpg', '459frame.jpg', '460frame.jpg', '461frame.jpg', '462frame.jpg', '463frame.jpg', '464frame.jpg', '465frame.jpg', '466frame.jpg', '467frame.jpg', '468frame.jpg', '469frame.jpg', '470frame.jpg', '471frame.jpg', '472frame.jpg', '473frame.jpg', '474frame.jpg', '475frame.jpg', '476frame.jpg', '477frame.jpg', '478frame.jpg', '479frame.jpg', '480frame.jpg', '481frame.jpg', '482frame.jpg', '483frame.jpg', '484frame.jpg', '485frame.jpg', '486frame.jpg', '487frame.jpg', '488frame.jpg', '489frame.jpg', '490frame.jpg', '491frame.jpg', '492frame.jpg', '493frame.jpg', '494frame.jpg', '495frame.jpg', '496frame.jpg', '497frame.jpg', '498frame.jpg', '499frame.jpg', '500frame.jpg', '501frame.jpg', '502frame.jpg', '503frame.jpg', '504frame.jpg', '505frame.jpg', '506frame.jpg', '507frame.jpg', '508frame.jpg', '509frame.jpg', '510frame.jpg', '511frame.jpg', '512frame.jpg']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Getting the pixels from the each frame and sending the data over\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Pn284GrJwMvg"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Input Set: Set of four frames' pixels. Two are the RGB values f and two are the depth maps alpha values \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hkRgM8BHwYAS"
       },
       "execution_count": null,
       "outputs": []
