--- a/distributed_object_tracking.ipynb
+++ b/distributed_object_tracking.ipynb
@@ -6,7 +6,7 @@
       "name": "distributed-object-tracking.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP8Lmqlu/HLVuqEKkV2C4Sy",
+      "authorship_tag": "ABX9TyPs8eCvcYGIM4kH6KX8FP52",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,11 +191,11 @@
         "# print(frames)\n"
       ],
       "metadata": {
-        "id": "Fx-3GFuPr1hA",
-        "outputId": "a02d9b2e-a641-4e08-d809-021f004e404b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fx-3GFuPr1hA",
+        "outputId": "a02d9b2e-a641-4e08-d809-021f004e404b"
       },
       "execution_count": 52,
       "outputs": [
@@ -225,10 +225,23 @@
       "cell_type": "code",
       "source": [
         "#Input Set: Set of four frames' pixels. Two are the RGB values f and two are the depth maps alpha values \n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "hkRgM8BHwYAS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Work Function:\n",
+        "# Setting up the model for detection and feeding it the pixel values"
+      ],
+      "metadata": {
+        "id": "AAC-ppKcw6X6"
       },
       "execution_count": null,
       "outputs": []
